ScannerParser/bin/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On program shift to state 1
-- On decls shift to state 2
## Reductions:
-- On WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF CONTINUE BREAK BOOL BLIT
--   reduce production decls ->

State 1:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 2:
## Known stack suffix:
## decls
## LR(1) items:
decls -> decls . stmt [ WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF CONTINUE BREAK BOOL BLIT ]
decls -> decls . fdecl [ WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF CONTINUE BREAK BOOL BLIT ]
decls -> decls . sdecl [ WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF CONTINUE BREAK BOOL BLIT ]
program -> decls . EOF [ # ]
## Transitions:
-- On WHILE shift to state 3
-- On TEMPLATE shift to state 178
-- On TAGS shift to state 5
-- On STRUCT shift to state 211
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On SEMI shift to state 139
-- On RETURN shift to state 140
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 144
-- On INT shift to state 34
-- On IF shift to state 145
-- On ID shift to state 35
-- On FOR shift to state 149
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On EOF shift to state 217
-- On CONTINUE shift to state 157
-- On BREAK shift to state 159
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 218
-- On templated_expr shift to state 44
-- On stmt shift to state 226
-- On sdecl shift to state 227
-- On group_typ shift to state 45
-- On fdecl shift to state 228
-- On expr shift to state 162
## Reductions:

State 3:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . LPAREN expr RPAREN stmt [ WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN RBRACE NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF ELSE CONTINUE BREAK BOOL BLIT ]
## Transitions:
-- On LPAREN shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
stmt -> WHILE LPAREN . expr RPAREN stmt [ WHILE TEMPLATE TAGS STRUCT STRING SLIT SET SEMI RETURN RBRACE NOT MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR FLOAT FLIT EOF ELSE CONTINUE BREAK BOOL BLIT ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On group_typ shift to state 45
-- On expr shift to state 137
## Reductions:

State 5:
## Known stack suffix:
## TAGS
## LR(1) items:
expr -> TAGS . struct_list TAGS [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On struct_list shift to state 132
-- On group_typ shift to state 45
-- On expr shift to state 136
## Reductions:

State 6:
## Known stack suffix:
## STRING
## LR(1) items:
typ -> STRING . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production typ -> STRING

State 7:
## Known stack suffix:
## SLIT
## LR(1) items:
expr -> SLIT . [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
## Reductions:
-- On UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND
--   reduce production expr -> SLIT

State 8:
## Known stack suffix:
## SET
## LR(1) items:
group_typ -> SET . LARROW INT RARROW [ RARROW ID COMMA ]
group_typ -> SET . LARROW BOOL RARROW [ RARROW ID COMMA ]
group_typ -> SET . LARROW ID RARROW [ RARROW ID COMMA ]
group_typ -> SET . LARROW group_typ RARROW [ RARROW ID COMMA ]
## Transitions:
-- On LARROW shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## SET LARROW
## LR(1) items:
group_typ -> SET LARROW . INT RARROW [ RARROW ID COMMA ]
group_typ -> SET LARROW . BOOL RARROW [ RARROW ID COMMA ]
group_typ -> SET LARROW . ID RARROW [ RARROW ID COMMA ]
group_typ -> SET LARROW . group_typ RARROW [ RARROW ID COMMA ]
## Transitions:
-- On SET shift to state 8
-- On LIST shift to state 10
-- On INT shift to state 20
-- On ID shift to state 22
-- On BOOL shift to state 24
-- On group_typ shift to state 26
## Reductions:

State 10:
## Known stack suffix:
## LIST
## LR(1) items:
group_typ -> LIST . LARROW INT RARROW [ RARROW ID COMMA ]
group_typ -> LIST . LARROW BOOL RARROW [ RARROW ID COMMA ]
group_typ -> LIST . LARROW ID RARROW [ RARROW ID COMMA ]
group_typ -> LIST . LARROW group_typ RARROW [ RARROW ID COMMA ]
## Transitions:
-- On LARROW shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## LIST LARROW
## LR(1) items:
group_typ -> LIST LARROW . INT RARROW [ RARROW ID COMMA ]
group_typ -> LIST LARROW . BOOL RARROW [ RARROW ID COMMA ]
group_typ -> LIST LARROW . ID RARROW [ RARROW ID COMMA ]
group_typ -> LIST LARROW . group_typ RARROW [ RARROW ID COMMA ]
## Transitions:
-- On SET shift to state 8
-- On LIST shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 16
-- On group_typ shift to state 18
## Reductions:

State 12:
## Known stack suffix:
## LIST LARROW INT
## LR(1) items:
group_typ -> LIST LARROW INT . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## LIST LARROW INT RARROW
## LR(1) items:
group_typ -> LIST LARROW INT RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> LIST LARROW INT RARROW

State 14:
## Known stack suffix:
## LIST LARROW ID
## LR(1) items:
group_typ -> LIST LARROW ID . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## LIST LARROW ID RARROW
## LR(1) items:
group_typ -> LIST LARROW ID RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> LIST LARROW ID RARROW

State 16:
## Known stack suffix:
## LIST LARROW BOOL
## LR(1) items:
group_typ -> LIST LARROW BOOL . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## LIST LARROW BOOL RARROW
## LR(1) items:
group_typ -> LIST LARROW BOOL RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> LIST LARROW BOOL RARROW

State 18:
## Known stack suffix:
## LIST LARROW group_typ
## LR(1) items:
group_typ -> LIST LARROW group_typ . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## LIST LARROW group_typ RARROW
## LR(1) items:
group_typ -> LIST LARROW group_typ RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> LIST LARROW group_typ RARROW

State 20:
## Known stack suffix:
## SET LARROW INT
## LR(1) items:
group_typ -> SET LARROW INT . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## SET LARROW INT RARROW
## LR(1) items:
group_typ -> SET LARROW INT RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> SET LARROW INT RARROW

State 22:
## Known stack suffix:
## SET LARROW ID
## LR(1) items:
group_typ -> SET LARROW ID . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## SET LARROW ID RARROW
## LR(1) items:
group_typ -> SET LARROW ID RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> SET LARROW ID RARROW

State 24:
## Known stack suffix:
## SET LARROW BOOL
## LR(1) items:
group_typ -> SET LARROW BOOL . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## SET LARROW BOOL RARROW
## LR(1) items:
group_typ -> SET LARROW BOOL RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> SET LARROW BOOL RARROW

State 26:
## Known stack suffix:
## SET LARROW group_typ
## LR(1) items:
group_typ -> SET LARROW group_typ . RARROW [ RARROW ID COMMA ]
## Transitions:
-- On RARROW shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## SET LARROW group_typ RARROW
## LR(1) items:
group_typ -> SET LARROW group_typ RARROW . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production group_typ -> SET LARROW group_typ RARROW

State 28:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On group_typ shift to state 45
-- On expr shift to state 131
## Reductions:

State 29:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On group_typ shift to state 45
-- On expr shift to state 130
## Reductions:

State 30:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On group_typ shift to state 45
-- On expr shift to state 128
## Reductions:

State 31:
## Known stack suffix:
## LITERAL
## LR(1) items:
expr -> LITERAL . [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
## Reductions:
-- On UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND
--   reduce production expr -> LITERAL

State 32:
## Known stack suffix:
## LBRACK
## LR(1) items:
expr -> LBRACK . list_list RBRACK [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On list_list shift to state 123
-- On group_typ shift to state 45
-- On expr shift to state 127
## Reductions:

State 33:
## Known stack suffix:
## LBRACE
## LR(1) items:
expr -> LBRACE . set_list RBRACE [ UNIONEQ UNION TIMESEQ TIMES TAGS SEMI RPAREN RBRACK RBRACE PLUSEQ PLUS OR NEQ MODEQ MOD MINUSEQ MINUS LT LEQ ISIN INTERSECTEQ INTERSECT IN GT GEQ EQ DIVIDEEQ DIVIDE COMMA AND ]
## Transitions:
-- On TAGS shift to state 5
-- On STRING shift to state 6
-- On SLIT shift to state 7
-- On SET shift to state 8
-- On NOT shift to state 28
-- On MINUS shift to state 29
-- On LPAREN shift to state 30
-- On LITERAL shift to state 31
-- On LIST shift to state 10
-- On LBRACK shift to state 32
-- On LBRACE shift to state 33
-- On INT shift to state 34
-- On ID shift to state 35
-- On FLOAT shift to state 37
-- On FLIT shift to state 38
-- On BOOL shift to state 39
-- On BLIT shift to state 40
-- On typ shift to state 41
-- On templated_expr shift to state 44
-- On set_list shift to state 118
-- On group_typ shift to state 45
-- On expr shift to state 122
## Reductions:

State 34:
## Known stack suffix:
## INT
## LR(1) items:
typ -> INT . [ RARROW ID COMMA ]
## Transitions:
## Reductions:
-- On RARROW ID COMMA
--   reduce production typ -> INT
